@@ -980,6 +980,75 @@ static void PaintPatrolArea(PaintSession& session, const SurfaceElement& element
     }
 }
 
+static void PaintSurfaceLandOwnership(
+    PaintSession& session, const SurfaceElement& tileElement, uint16_t height, uint8_t surfaceShape)
+{
+    auto [aboveWaterHeight, aboveWaterSurfaceShape] = SurfaceGetHeightAboveWater(tileElement, height, surfaceShape);
+
+    // Loc660E9A:
+    if (tileElement.GetOwnership() & OWNERSHIP_OWNED)
+    {
+        assert(static_cast<size_t>(surfaceShape) < std::size(Byte97B444));
+        assert(static_cast<size_t>(aboveWaterSurfaceShape) < std::size(Byte97B444));
+
+        // Paint outline on top of surface (can be underwater)
+        PaintAttachToPreviousPS(session, ImageId(SPR_TERRAIN_SELECTION_SQUARE + Byte97B444[surfaceShape]), 0, 0);
+
+        const auto tileIsUnderWater = height != aboveWaterHeight || surfaceShape != aboveWaterSurfaceShape;
+        if (tileIsUnderWater)
+        {
+            PaintStruct* backup = session.LastPS;
+            PaintAddImageAsParent(
+                session, ImageId(SPR_TERRAIN_SELECTION_SQUARE + Byte97B444[aboveWaterSurfaceShape]), { 0, 0, aboveWaterHeight },
+                { 32, 32, 1 });
+            session.LastPS = backup;
+        }
+    }
+    else if (tileElement.GetOwnership() & OWNERSHIP_AVAILABLE)
+    {
+        const auto pos = CoordsXYZ(session.MapPosition.x + 16, session.MapPosition.y + 16, aboveWaterHeight);
+        const auto height2 = TileElementHeight(pos, aboveWaterSurfaceShape);
+
+        PaintStruct* backup = session.LastPS;
+        PaintAddImageAsParent(session, ImageId(SPR_LAND_OWNERSHIP_AVAILABLE), { 16, 16, height2 }, { 1, 1, 0 });
+        session.LastPS = backup;
+    }
+}
+
+static void PaintSurfaceConstructionRights(
+    PaintSession& session, const SurfaceElement& tileElement, uint16_t height, uint8_t surfaceShape)
+{
+    auto [aboveWaterHeight, aboveWaterSurfaceShape] = SurfaceGetHeightAboveWater(tileElement, height, surfaceShape);
+
+    if (tileElement.GetOwnership() & OWNERSHIP_CONSTRUCTION_RIGHTS_OWNED)
+    {
+        assert(static_cast<size_t>(surfaceShape) < std::size(Byte97B444));
+        assert(static_cast<size_t>(aboveWaterSurfaceShape) < std::size(Byte97B444));
+
+        // Paint outline on top of surface (can be underwater)
+        PaintAttachToPreviousPS(session, ImageId(SPR_TERRAIN_SELECTION_DOTTED + Byte97B444[surfaceShape]), 0, 0);
+
+        const auto tileIsUnderWater = height != aboveWaterHeight || surfaceShape != aboveWaterSurfaceShape;
+        if (tileIsUnderWater)
+        {
+            PaintStruct* backup = session.LastPS;
+            PaintAddImageAsParent(
+                session, ImageId(SPR_TERRAIN_SELECTION_DOTTED + Byte97B444[aboveWaterSurfaceShape]), { 0, 0, aboveWaterHeight },
+                { 32, 32, 1 });
+            session.LastPS = backup;
+        }
+    }
+    else if (tileElement.GetOwnership() & OWNERSHIP_CONSTRUCTION_RIGHTS_AVAILABLE)
+    {
+        const auto pos = CoordsXYZ(session.MapPosition.x + 16, session.MapPosition.y + 16, aboveWaterHeight);
+        const auto height2 = TileElementHeight(pos, aboveWaterSurfaceShape);
+
+        PaintStruct* backup = session.LastPS;
+        PaintAddImageAsParent(session, ImageId(SPR_LAND_CONSTRUCTION_RIGHTS_AVAILABLE), { 16, 16, height2 }, { 1, 1, 0 });
+        session.LastPS = backup;
+    }
+}
+
 /**
  *  rct2: 0x0066062C
  */
@@ -1134,38 +1203,12 @@ void PaintSurface(PaintSession& session, uint8_t direction, uint16_t height, con
 
     if (session.ViewFlags & VIEWPORT_FLAG_LAND_OWNERSHIP)
     {
-        // Loc660E9A:
-        if (tileElement.GetOwnership() & OWNERSHIP_OWNED)
-        {
-            assert(surfaceShape < std::size(Byte97B444));
-            PaintAttachToPreviousPS(session, ImageId(SPR_TERRAIN_SELECTION_SQUARE + Byte97B444[surfaceShape]), 0, 0);
-        }
-        else if (tileElement.GetOwnership() & OWNERSHIP_AVAILABLE)
-        {
-            const CoordsXY& pos = session.MapPosition;
-            const int32_t height2 = (TileElementHeight({ pos.x + 16, pos.y + 16 })) + 3;
-            PaintStruct* backup = session.LastPS;
-            PaintAddImageAsParent(session, ImageId(SPR_LAND_OWNERSHIP_AVAILABLE), { 16, 16, height2 }, { 1, 1, 0 });
-            session.LastPS = backup;
-        }
+        PaintSurfaceLandOwnership(session, tileElement, height, surfaceShape);
     }
 
     if (session.ViewFlags & VIEWPORT_FLAG_CONSTRUCTION_RIGHTS && !(tileElement.GetOwnership() & OWNERSHIP_OWNED))
     {
-        if (tileElement.GetOwnership() & OWNERSHIP_CONSTRUCTION_RIGHTS_OWNED)
-        {
-            assert(surfaceShape < std::size(Byte97B444));
-            PaintAttachToPreviousPS(session, ImageId(SPR_TERRAIN_SELECTION_DOTTED + Byte97B444[surfaceShape]), 0, 0);
-        }
-        else if (tileElement.GetOwnership() & OWNERSHIP_CONSTRUCTION_RIGHTS_AVAILABLE)
-        {
-            const CoordsXY& pos = session.MapPosition;
-            const int32_t height2 = TileElementHeight({ pos.x + 16, pos.y + 16 });
-            PaintStruct* backup = session.LastPS;
-            PaintAddImageAsParent(
-                session, ImageId(SPR_LAND_CONSTRUCTION_RIGHTS_AVAILABLE), { 16, 16, height2 + 3 }, { 1, 1, 0 });
-            session.LastPS = backup;
-        }
+        PaintSurfaceConstructionRights(session, tileElement, height, surfaceShape);
     }
 
     // ebx[0] = esi;
@@ -1213,6 +1256,23 @@ void PaintSurface(PaintSession& session, uint8_t direction, uint16_t height, con
                     eax + static_cast<uint32_t>(FilterPaletteID::PaletteLandMarker0));
                 const auto image_id = ImageId(SPR_TERRAIN_SELECTION_CORNER + Byte97B444[surfaceShape], fpId);
                 PaintAttachToPreviousPS(session, image_id, 0, 0);
+            }
+            else if (mapSelectionType == MAP_SELECT_TYPE_FULL_LAND_RIGHTS)
+            {
+                auto [waterHeight, waterSurfaceShape] = SurfaceGetHeightAboveWater(tileElement, height, surfaceShape);
+
+                const auto fpId = FilterPaletteID::PaletteGlassLightPurple;
+                const auto imageId1 = ImageId(SPR_TERRAIN_SELECTION_CORNER + Byte97B444[surfaceShape], fpId);
+                PaintAttachToPreviousPS(session, imageId1, 0, 0);
+
+                const bool isUnderWater = (surfaceShape != waterSurfaceShape || height != waterHeight);
+                if (isUnderWater)
+                {
+                    const auto imageId2 = ImageId(SPR_TERRAIN_SELECTION_CORNER + Byte97B444[waterSurfaceShape], fpId);
+                    PaintStruct* backup = session.LastPS;
+                    PaintAddImageAsParent(session, imageId2, { 0, 0, waterHeight }, { 32, 32, 1 });
+                    session.LastPS = backup;
+                }
             }
             else
             {
